using Grid;
namespace Synergy
{
    public interface ISynergy
    {
        
    }
}